# CmakeUSBDigi

./: CMakeLists.txt  CMakeSettings.json  Echo.ino
CmakeUSB/: CMakeLists.txt  CmakeUSB.cpp  CmakeUSB.h
Echo/: Echo.ino  MC_USB.h
libusb-1.0.26/lib/: libusb-1.0.lib
libusb/lib/: libusb0.lib
libusb/src/: install_filter_win_rc.rc  libusb-win32_version.h
корпус_плата/: Digi.m3d  Сборка.a3d  верх.m3d  верх.stl  диод.m3d  задвижка.m3d  кнопки.m3d  низ.m3d  низ.stl  плата.m3d  штырь.m3d
